--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 body{
     background-color: rgb(255, 0, 85);
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgi, 'Times New Roman', Times, serif;
     margin: 150px auto;
     width: 600px;
 
